@@ -57,7 +57,7 @@
           'grove_pir_motion_sensor', 'grove_line_finder',
           //grove LCD
           'grove_serial_lcd_print', 'grove_serial_lcd_power',
-          'grove_serial_lcd_effect',
+          'grove_serial_lcd_effect', 'grove_ultrasonic_ranger',
           //control
           'base_delay', 'controls_if', 'controls_if_if', 'controls_if_elseif', 'controls_if_else', 'controls_for',
           //'controls_whileUntil', 'controls_flow_statements',
